tests/cases/compiler-development/artifact/errors/diagnostic-generic-nongeneric-type-args.diagnostic
diagnostic error code=T0001 family=type message="function 'add' does not take type arguments" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-nongeneric-type-args.ari" display="tests/cases/generics/errors/generic-nongeneric-type-args.ari" bytes=111
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-nongeneric-type-args.ari" line=6 column=10 end_line=6 end_column=13 byte_start=93 byte_end=96 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-nongeneric-type-args.ari:6:10\n   |\n 6 |   return add<i64>(1, 2);\n   |          ^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-nongeneric-type-args.ari" line=1 column=4 end_line=1 end_column=7 byte_start=3 byte_end=6 message="function 'add' is declared without generic parameters"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-nongeneric-type-args.ari:1:4\n   |\n 1 | fn add(left: i64, right: i64) -> i64 {\n   |    ^^^"
  Note index=0 location=none message="only generic functions may be called with explicit type arguments"
  Help index=0 location=none message="remove the explicit type argument list from this call"
